test/integration/good/tuples/tuple-ix-assign.stan
transformed data {
  (int, int) x;
  x.1 = 5;
}
