test/integration/bad/shadow.stan
functions {
   int log10(int x) {
    return 1;
   }
}